--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^44.0.0",
+        "@ckeditor/ckeditor5-react": "^9.4.0",
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-react": "^0.8.1",
         "dayjs": "^1.11.13"
     }
 }
